cloud-infra-macros/tests/fails/memory_boundary_high.rs
use cloud_infra_macros::memory;

fn example() {
    let mem = memory!(10241);
}

fn main() {}