cloud-infra-macros/tests/fails/memory_boundary_high.stderr
error: value should be at most 10240
 --> tests/fails/memory_boundary_high.rs:4:23
  |
4 |     let mem = memory!(10241);
  |                       ^^^^^
